--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <h1>Transparency and Governance ROAD TRIP</h1>
 
 <ul>
-<li><a href="/road_trip_1/index.html">Day 1: Openness, license and motivation</a></li>
-<li><a href="/road_trip_2/index.html">Day 3: Hands on the Wheel: Governace, ethics and integrity</a></li>
-<li><a href="/road_trip_3/index.html">Day 3: Making Decisions</a></li>
+<li><a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_1/index.html">Day 1: Openness, license and motivation</a></li>
+<li><a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_2/index.html">Day 2: Hands on the Wheel: Governace, ethics and integrity</a></li>
+<li><a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_3/index.html">Day 3: Making Decisions</a></li>
 </ul>
