--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,36 @@
-<h1>Transparency and Governance ROAD TRIP</h1>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Transparency and Governance ROAD TRIP</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+	<link href="style.css" rel="stylesheet">
+  </head>
+  <body>
+ <div class="container-fluid webpage-max-width">  
+   
 
+
+<h1>Transparency and Governance ROAD TRIP</h1>
+<!--
 <ul>
 <li><a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_1/index.html">Day 1: Openness, license and motivation</a></li>
 <li><a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_2/index.html">Day 2: Hands on the Wheel: Governace, ethics and integrity</a></li>
 <li><a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_3/index.html">Day 3: Making Decisions</a></li>
 </ul>
+-->
+<div class="row my-boxes">
+<div class="col-12 col-sm-4">
+<a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_1/index.html">Day 1<br>Openness, license and motivation</a>
+</div>
+<div class="col-12 col-sm-4">
+<a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_2/index.html">Day 2<br>Hands on the Wheel: Governace, ethics and integrity</a>
+</div>
+<div class="col-12 col-sm-4">
+<a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_3/index.html">Day 3<br>Making Decisions</a>
+</div></div>
+
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  </body>
+</html>
