--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
    
 
 
-<h1>Transparency and Governance ROAD TRIP</h1>
+<h1 class="p-4">Transparency and Governance ROAD TRIP</h1>
 <!--
 <ul>
 <li><a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_1/index.html">Day 1: Openness, license and motivation</a></li>
