--- a/index.htm
+++ b/index.htm
@@ -30,6 +30,11 @@
 <div class="col-12 col-sm-4">
 <a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_3/index.html">Day 3<br>Making Decisions</a>
 </div></div>
+<div class="row justify-content-center">
+<div class="col-4 p-4">
+<img src="assets/TINZ-Logo-web-blue 1.svg" alt="Transparency International New Zealand Logo">
+</div></div>
+</div>
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
