Added Menus and Info

--- a/index.htm
+++ b/index.htm
@@ -8,33 +8,33 @@
 	<link href="style.css" rel="stylesheet">
   </head>
   <body>
+  <!-- Navbar -->
+ <?php include "nav.htm"; ?>
  <div class="container-fluid webpage-max-width">  
-   
+  <h1 class="p-4 text-center">Transparency and Governance ROAD TRIP</h1>
+<?php include "introduction.htm"; ?>
+<?php include "instructions.htm"; ?>
+
+</div>
+<div class="container-fluid webpage-max-width home-page-image-section">
+<h2 class="p-4 text-shadow fw-bold" style="color: #3695d8;" >Take the ROAD TRIP</h2>
+<div class="row my-boxes justify-content-center">
+<div class="col-12 col-sm-6 col-lg-4">
+<a href="../road_trip_1/index.html">Day 1<br>Openness, license and motivation</a>
+</div>
+<div class="col-12 col-sm-6 col-lg-4">
+<a href="../road_trip_2/index.html">Day 2<br>Hands on the Wheel: Governace, ethics and integrity</a>
+</div>
+<div class="col-12 col-sm-6 col-lg-4">
+<a href="../road_trip_3/index.html">Day 3<br>Making Decisions</a>
+</div></div></div>
+<div class="container-fluid webpage-max-width pt-2">
+<?php include "about.htm"; ?>
 
 
-<h1 class="p-4">Transparency and Governance ROAD TRIP</h1>
-<!--
-<ul>
-<li><a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_1/index.html">Day 1: Openness, license and motivation</a></li>
-<li><a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_2/index.html">Day 2: Hands on the Wheel: Governace, ethics and integrity</a></li>
-<li><a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_3/index.html">Day 3: Making Decisions</a></li>
-</ul>
--->
-<div class="row my-boxes">
-<div class="col-12 col-sm-4">
-<a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_1/index.html">Day 1<br>Openness, license and motivation</a>
+
 </div>
-<div class="col-12 col-sm-4">
-<a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_2/index.html">Day 2<br>Hands on the Wheel: Governace, ethics and integrity</a>
-</div>
-<div class="col-12 col-sm-4">
-<a href="https://ti-nz.github.io/Local-Government-Resource//road_trip_3/index.html">Day 3<br>Making Decisions</a>
-</div></div>
-<div class="row justify-content-center">
-<div class="col-4 p-4">
-<img src="assets/TINZ-Logo-web-blue 1.svg" alt="Transparency International New Zealand Logo">
-</div></div>
-</div>
+<?php include "footer.htm"; ?>
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
