--- a/road_trip_1/index.html
+++ b/road_trip_1/index.html
@@ -3,7 +3,8 @@
 <html style=background-color:#ced1d3;>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/><meta name="format-detection" content="telephone=no"/><meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-mobile-web-app-status-bar-style" content="black"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="msapplication-tap-highlight" content="no"/><title>road trip part 1 - Transparency 21-8-22</title><link rel="apple-touch-icon-precomposed" href="data/apple-touch-icon.png"/><link rel="shortcut icon" type="image/ico" href="data/favicon.ico"/><style>body {background-color:#ced1d3;}#spr0_1b67f786 {display:none;}</style>
-    
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     
     <style>
 		#playerView {
@@ -48,6 +49,7 @@
     </style>
 </head>
 <body>
+ <?php include "../nav.htm"; ?>
 	<div id="preloader"></div>
 	<script src="data/browsersupport.js?3694F116"></script>
 	<script src="data/player.js?3694F116"></script>
@@ -114,5 +116,8 @@
 				start();
 		})();
     </script>
+	
+	<?php include "../footer.htm"; ?>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
