--- a/nav.htm
+++ b/nav.htm
@@ -1,7 +1,4 @@
-<style>
-.navbar { 
---bs-navbar-nav-link-padding-x :16px; !important; }
-</style>
+
   <div class="container-fluid" style="background-color:#3695d8;padding-left: 8%; padding-right: 8%;">
   <nav class="navbar navbar-expand-md">
 
@@ -14,9 +11,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="../">Home</a>
         </li>
-		<li class=""><a class="nav-link text-dark" href="../road_trip_1/index.html">Day 1:<br>Openness, license and motivation</a></li>
-		<li class=""><a class="nav-link text-dark" href="../road_trip_2/index.html">Day 2:<br>Hands on the Wheel: Governace, ethics and integrity</a></li>
-		<li class=""><a class="nav-link text-dark" href="../road_trip_3/index.html">Day 3:<br>Making Decisions</a></li>
+		<li class=""><a class="nav-link text-dark" href="../Local-Government-Resource/road_trip_1/index.html">Day 1:<br>Openness, license and motivation</a></li>
+		<li class=""><a class="nav-link text-dark" href="..Local-Government-Resource/road_trip_2/index.html">Day 2:<br>Hands on the Wheel: Governace, ethics and integrity</a></li>
+		<li class=""><a class="nav-link text-dark" href="..Local-Government-Resource/road_trip_3/index.html">Day 3:<br>Making Decisions</a></li>
         
        
       </ul>
