--- a/index.htm
+++ b/index.htm
@@ -12,24 +12,24 @@
  <?php include "nav.htm"; ?>
  <div class="container-fluid webpage-max-width">  
   <h1 class="p-4 text-center">Transparency and Governance ROAD TRIP</h1>
-<?php include "../Local-Government-Resource/introduction.htm"; ?>
-<?php include "../Local-Government-Resource/instructions.htm"; ?>
+<?php include "/Local-Government-Resource/introduction.htm"; ?>
+<?php include "/Local-Government-Resource/instructions.htm"; ?>
 
 </div>
 <div class="container-fluid webpage-max-width home-page-image-section">
 <h2 class="p-4 text-shadow fw-bold" style="color: #3695d8;" >Take the ROAD TRIP</h2>
 <div class="row my-boxes justify-content-center">
 <div class="col-12 col-sm-6 col-lg-4">
-<a href="..../Local-Government-Resource//road_trip_1/index.html">Day 1<br>Openness, license and motivation</a>
+<a href="/Local-Government-Resource/road_trip_1/index.html">Day 1<br>Openness, license and motivation</a>
 </div>
 <div class="col-12 col-sm-6 col-lg-4">
-<a href="..../Local-Government-Resource//road_trip_2/index.html">Day 2<br>Hands on the Wheel: Governace, ethics and integrity</a>
+<a href="/Local-Government-Resource/road_trip_2/index.html">Day 2<br>Hands on the Wheel: Governace, ethics and integrity</a>
 </div>
 <div class="col-12 col-sm-6 col-lg-4">
-<a href="..../Local-Government-Resource//road_trip_3/index.html">Day 3<br>Making Decisions</a>
+<a href="/Local-Government-Resource/road_trip_3/index.html">Day 3<br>Making Decisions</a>
 </div></div></div>
 <div class="container-fluid webpage-max-width pt-2">
-<?php include "../Local-Government-Resource/about.htm"; ?>
+<?php include "/Local-Government-Resource/about.htm"; ?>
 
 
 
