--- a/index.htm
+++ b/index.htm
@@ -9,11 +9,44 @@
   </head>
   <body>
   <!-- Navbar -->
- <?php include "nav.htm"; ?>
+
+  <div class="container-fluid" style="background-color:#3695d8;padding-left: 8%; padding-right: 8%;">
+  <nav class="navbar navbar-expand-md">
+
+	<a class="navbar-brand" href="/Local-Government-Resource/"><img src="/Local-Government-Resource/assets/TINZ-Logo-web-blue 1.svg" alt="Transparency International New Zealand Logo"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center" style="font-size: 110%;">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/Local-Government-Resource/">Home</a>
+        </li>
+		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_1/index.html">Day 1:<br>Openness, license and motivation</a></li>
+		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_2/index.html">Day 2:<br>Hands on the Wheel: Governace, ethics and integrity</a></li>
+		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_3/index.html">Day 3:<br>Making Decisions</a></li>
+        
+       
+      </ul>
+
+ 
+  </div>
+</nav>
+</div>
+<!-- End Nav -->
+
  <div class="container-fluid webpage-max-width">  
   <h1 class="p-4 text-center">Transparency and Governance ROAD TRIP</h1>
-<?php include "/Local-Government-Resource/introduction.htm"; ?>
-<?php include "/Local-Government-Resource/instructions.htm"; ?>
+<p>The TINZ road trip is a journey through elements of local government leadership that are essential to the role. It is not a deep dive, but offers opportunities to learn and reflect.</p>
+<h2>Instructions</h2>
+<ul>
+<li>There are three learning resources, click on each box below to access them.</li>
+<li>Click on the buttons to navigate the course</li>
+<li>The diagonal double arrow (provide image) enables full screen view</li>
+<li>There are quizes along the way to help you think about the topic</li>
+</ul>
+<h2>Privacy and Confidentiality</h2>
+<p>There is no recording of your answers; no personal your data is kept. Information available is limited to aggrigate website visitor data</p>
 
 </div>
 <div class="container-fluid webpage-max-width home-page-image-section">
@@ -29,12 +62,86 @@
 <a href="/Local-Government-Resource/road_trip_3/index.html">Day 3<br>Making Decisions</a>
 </div></div></div>
 <div class="container-fluid webpage-max-width pt-2">
-<?php include "/Local-Government-Resource/about.htm"; ?>
+<h2>About the Resource</h2>
+<p>We are asking newly elected officials to take this Road Trip because it is important. Transparency, good governance and accountability improve citizen participation, build trust and reduce corruption. Transparency is an important means for holding power into account.</p>
+<p>The Road Trip consists of three parts that take approximately 20 minutes each, recommended to be completed in three separate sessions in order to maximize their impact. The parts are:</p>
+<ul style="list-style-type:none;">
+<li>Day 1: Openness, license and motivation</li>      
+<li>Day 2: Hands on the Wheel: Governance, ethics and integrity</li> 
+<li>Day 3: Making Decisions</li> 
+</ul>
+<p>The course is interactive with self evaluating quizzes along the way.</p>
 
 
 
 </div>
-<?php include "footer.htm"; ?>
+<!-- Footer -->
+<!-- Footer -->
+<!-- https://mdbootstrap.com/docs/standard/navigation/footer/ -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<footer class="bg-dark text-center text-white" style="margin-top: 100px;>
+  <!-- Grid container -->
+  <div class="container p-4">
+    <!-- Section: Social media -->
+    <section class="mb-4">
+      <!-- Facebook -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-facebook-f"></i
+      ></a>
+
+      <!-- Twitter -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-twitter"></i
+      ></a>
+
+      <!-- Google -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-google"></i
+      ></a>
+
+      <!-- Instagram -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-instagram"></i
+      ></a>
+
+      <!-- Linkedin -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-linkedin-in"></i
+      ></a>
+
+      <!-- Github -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-github"></i
+      ></a>
+    </section>
+    <!-- Section: Social media -->
+
+
+
+
+    <!-- Section: Text -->
+    <section class="mb-4">
+      <p>
+The Road Trip was developed by Transparency International New Zealand with the assistance and support of Local Government New Zealand.
+      </p>
+    </section>
+ 
+  </div>
+  <div class="row justify-content-center">
+<div class="col-4 p-4 text-center m-2" style="background-color:#3695d8 ;">
+<img src="/assets/TINZ-Logo-web-blue 1.svg" alt="Transparency International New Zealand Logo">
+</div></div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2020 - <?php echo date("Y") ?> Copyright:
+    <a class="text-white" href="https://transparency.org.nz/">Transparency International New Zealand</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
+<!-- END Footer -->
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
