--- a/road_trip_2/index.html
+++ b/road_trip_2/index.html
@@ -49,7 +49,34 @@
     </style>
 </head>
 <body>
- <?php include "../nav.htm"; ?>
+<!-- NAV -->
+<base href="~/Local-Government-Resource" />
+<a class="nav-link active" aria-current="page" href="/">Home</a>
+  <div class="container-fluid" style="background-color:#3695d8;padding-left: 8%; padding-right: 8%;">
+  <nav class="navbar navbar-expand-md">
+
+	<a class="navbar-brand" href="/Local-Government-Resource/"><img src="/Local-Government-Resource/assets/TINZ-Logo-web-blue 1.svg" alt="Transparency International New Zealand Logo"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center" style="font-size: 110%;">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="../Local-Government-Resource/">Home</a>
+        </li>
+		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_1/index.html">Day 1:<br>Openness, license and motivation</a></li>
+		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_2/index.html">Day 2:<br>Hands on the Wheel: Governace, ethics and integrity</a></li>
+		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_3/index.html">Day 3:<br>Making Decisions</a></li>
+        
+       
+      </ul>
+
+ 
+  </div>
+</nav>
+</div>
+
+<!-- End NAV -->
 	<div id="preloader"></div>
 	<script src="data/browsersupport.js?6AF9189E"></script>
 	<script src="data/player.js?6AF9189E"></script>
@@ -116,7 +143,71 @@
 				start();
 		})();
     </script>
-		<?php include "../footer.htm"; ?>
+<!-- Footer -->
+<!-- https://mdbootstrap.com/docs/standard/navigation/footer/ -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<footer class="bg-dark text-center text-white" style="margin-top: 100px;>
+  <!-- Grid container -->
+  <div class="container p-4">
+    <!-- Section: Social media -->
+    <section class="mb-4">
+      <!-- Facebook -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-facebook-f"></i
+      ></a>
+
+      <!-- Twitter -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-twitter"></i
+      ></a>
+
+      <!-- Google -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-google"></i
+      ></a>
+
+      <!-- Instagram -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-instagram"></i
+      ></a>
+
+      <!-- Linkedin -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-linkedin-in"></i
+      ></a>
+
+      <!-- Github -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-github"></i
+      ></a>
+    </section>
+    <!-- Section: Social media -->
+
+
+
+
+    <!-- Section: Text -->
+    <section class="mb-4">
+      <p>
+The Road Trip was developed by Transparency International New Zealand with the assistance and support of Local Government New Zealand.
+      </p>
+    </section>
+ 
+  </div>
+  <div class="row justify-content-center">
+<div class="col-4 p-4 text-center m-2" style="background-color:#3695d8 ;">
+<img src="/assets/TINZ-Logo-web-blue 1.svg" alt="Transparency International New Zealand Logo">
+</div></div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2020 - <?php echo date("Y") ?> Copyright:
+    <a class="text-white" href="https://transparency.org.nz/">Transparency International New Zealand</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
