--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Transparency and Governance ROAD TRIP</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-	<link href="style.css" rel="stylesheet">
+	<link href="/Local-Government-Resource/style.css" rel="stylesheet">
   </head>
   <body>
   <!-- Navbar -->
@@ -20,10 +20,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center" style="font-size: 110%;">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/Local-Government-Resource/">Home</a>
+         <a class="nav-link active home-link" aria-current="page" href="/Local-Government-Resource/">ROAD TRIP Home</a>
         </li>
-		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_1/index.html">Day 1:<br>Openness, license and motivation</a></li>
-		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_2/index.html">Day 2:<br>Hands on the Wheel: Governace, ethics and integrity</a></li>
+		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_1/index.html">Day 1:<br>Openness, licence and motivation</a></li>
+		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_2/index.html">Day 2:<br>Governace, ethics and integrity</a></li>
 		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_3/index.html">Day 3:<br>Making Decisions</a></li>
         
        
@@ -53,10 +53,10 @@
 <h2 class="p-4 text-shadow fw-bold" style="color: #3695d8;" >Take the ROAD TRIP</h2>
 <div class="row my-boxes justify-content-center">
 <div class="col-12 col-sm-6 col-lg-4">
-<a href="/Local-Government-Resource/road_trip_1/index.html">Day 1<br>Openness, license and motivation</a>
+<a href="/Local-Government-Resource/road_trip_1/index.html">Day 1<br>Openness, lisense and motivation</a>
 </div>
 <div class="col-12 col-sm-6 col-lg-4">
-<a href="/Local-Government-Resource/road_trip_2/index.html">Day 2<br>Hands on the Wheel: Governace, ethics and integrity</a>
+<a href="/Local-Government-Resource/road_trip_2/index.html">Day 2<br>Hands on the Wheel: Governance, ethics and integrity</a>
 </div>
 <div class="col-12 col-sm-6 col-lg-4">
 <a href="/Local-Government-Resource/road_trip_3/index.html">Day 3<br>Making Decisions</a>
@@ -66,7 +66,7 @@
 <p>We are asking newly elected officials to take this Road Trip because it is important. Transparency, good governance and accountability improve citizen participation, build trust and reduce corruption. Transparency is an important means for holding power into account.</p>
 <p>The Road Trip consists of three parts that take approximately 20 minutes each, recommended to be completed in three separate sessions in order to maximize their impact. The parts are:</p>
 <ul style="list-style-type:none;">
-<li>Day 1: Openness, license and motivation</li>      
+<li>Day 1: Openness, licence and motivation</li>      
 <li>Day 2: Hands on the Wheel: Governance, ethics and integrity</li> 
 <li>Day 3: Making Decisions</li> 
 </ul>
@@ -122,7 +122,7 @@
     <!-- Section: Text -->
     <section class="mb-4">
       <p>
-The Road Trip was developed by Transparency International New Zealand with the assistance and support of Local Government New Zealand.
+Local Government New Zealand is fully supportive of this resource.
       </p>
     </section>
  
@@ -135,7 +135,7 @@ The Road Trip was developed by Transparency International New Zealand with the a
 
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2020 - <?php echo date("Y") ?> Copyright:
+    © 2020 - 2022 Copyright:
     <a class="text-white" href="https://transparency.org.nz/">Transparency International New Zealand</a>
   </div>
   <!-- Copyright -->
