--- a/index.htm
+++ b/index.htm
@@ -82,34 +82,34 @@
 <footer class="bg-dark text-center text-white" style="margin-top: 100px;>
   <!-- Grid container -->
   <div class="container p-4">
-    <!-- Section: Social media -->
+    <!-- Section: Social media 
     <section class="mb-4">
-      <!-- Facebook -->
+      <!-- Facebook 
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
         ><i class="fab fa-facebook-f"></i
       ></a>
 
-      <!-- Twitter -->
+      <!-- Twitter 
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
         ><i class="fab fa-twitter"></i
       ></a>
 
-      <!-- Google -->
+      <!-- Google 
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
         ><i class="fab fa-google"></i
       ></a>
 
-      <!-- Instagram -->
+      <!-- Instagram 
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
         ><i class="fab fa-instagram"></i
       ></a>
 
-      <!-- Linkedin -->
+      <!-- Linkedin 
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
         ><i class="fab fa-linkedin-in"></i
       ></a>
 
-      <!-- Github -->
+      <!-- Github 
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
         ><i class="fab fa-github"></i
       ></a>
@@ -129,7 +129,7 @@ Local Government New Zealand is fully supportive of this resource.
   </div>
   <div class="row justify-content-center">
 <div class="col-4 p-4 text-center m-2" style="background-color:#3695d8 ;">
-<img src="/assets/TINZ-Logo-web-blue 1.svg" alt="Transparency International New Zealand Logo">
+<img src="/Local-Government-Resource/assets/TINZ-Logo-web-blue 1.svg" alt="Transparency International New Zealand Logo">
 </div></div>
   <!-- Grid container -->
 
