Update after review

--- a/road_trip_1/index.html
+++ b/road_trip_1/index.html
@@ -2,10 +2,11 @@
 <!-- Created with iSpring --><!-- 1262 644 --><!--version 10.3.5.15004 --><!--type html --><!--mainFolder ./ -->
 <html style=background-color:#ced1d3;>
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/><meta name="format-detection" content="telephone=no"/><meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-mobile-web-app-status-bar-style" content="black"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="msapplication-tap-highlight" content="no"/><title>road trip part 1 - Transparency 21-8-22</title><link rel="apple-touch-icon-precomposed" href="data/apple-touch-icon.png"/><link rel="shortcut icon" type="image/ico" href="data/favicon.ico"/><style>body {background-color:#ced1d3;}#spr0_1b67f786 {display:none;}</style>
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<link href="/Local-Government-Resource/style.css" rel="stylesheet">   
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/><meta name="format-detection" content="telephone=no"/><meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-mobile-web-app-status-bar-style" content="black"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="msapplication-tap-highlight" content="no"/><title>road trip part 1 - Transparency 21-8-22</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+	<link href="/Local-Government-Resource/style.css" rel="stylesheet"> 
+  
+	<link rel="apple-touch-icon-precomposed" href="data/apple-touch-icon.png"/><link rel="shortcut icon" type="image/ico" href="data/favicon.ico"/><style>body {background-color:#ced1d3;}#spr0_1b67f786 {display:none;}</style>  
     <style>
 		#playerView {
 			position:absolute;
@@ -48,12 +49,11 @@
 		@-webkit-keyframes preloader_spin { 0% {-webkit-transform: rotate(0deg);} 100% {-webkit-transform: rotate(360deg);}}
     </style>
 </head>
-<body>
-<!-- NAV -->
+<body><!-- NAV -->
   <div class="container-fluid" style="background-color:#3695d8;padding-left: 8%; padding-right: 8%;">
   <nav class="navbar navbar-expand-md">
 
-	<a class="navbar-brand" href="/Local-Government-Resource/"><img src="/Local-Government-Resource/assets/TINZ-Logo-web-blue 1.svg" alt="Transparency International New Zealand Logo"></a>
+	<span class="navbar-brand"><img src="/Local-Government-Resource/assets/TINZ-Logo-web-blue 1.svg" alt="Transparency International New Zealand Logo"></span>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -63,8 +63,8 @@
          <a class="nav-link active home-link" aria-current="page" href="/Local-Government-Resource/">ROAD TRIP Home</a>
         </li>
 		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_1/index.html">Day 1:<br>Openness, licence and motivation</a></li>
-		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_2/index.html">Day 2:<br>Governace, ethics and integrity</a></li>
-		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_3/index.html">Day 3:<br>Making Decisions</a></li>
+		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_2/index.html">Day 2:<br>Governance, ethics and integrity</a></li>
+		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_3/index.html">Day 3:<br>Making decisions</a></li>
         
        
       </ul>
@@ -75,6 +75,7 @@
 </div>
 
 <!-- End NAV -->
+
 	<div id="preloader"></div>
 	<script src="data/browsersupport.js?3694F116"></script>
 	<script src="data/player.js?3694F116"></script>
@@ -142,35 +143,27 @@
 		})();
     </script>
 	
+	
 <!-- Footer -->
 <!-- https://mdbootstrap.com/docs/standard/navigation/footer/ -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <footer class="bg-dark text-center text-white" style="margin-top: 100px;>
   <!-- Grid container -->
   <div class="container p-4">
 
-
-
-
-
-    <!-- Section: Text -->
-    <section class="mb-4">
-      <p>
-Local Government New Zealand is fully supportive of this resource.
-
-      </p>
+      <p class="p-2">Local Government New Zealand is fully supportive of this resource.</p>
     </section>
  
   </div>
   <div class="row justify-content-center">
-<div class="col-4 p-4 text-center m-2" style="background-color:#3695d8 ;">
-<img src="/Local-Government-Resource/assets/TINZ-Logo-web-blue 1.svg" alt="Transparency International New Zealand Logo">
+<div class="col-4 p-4 text-center m-2">
+<a class="navbar-brand" href="/Local-Government-Resource/"><img src="/Local-Government-Resource/assets/TINZ-Logo-web-blue 1.svg" alt="Transparency International New Zealand Logo"></a>
 </div></div>
   <!-- Grid container -->
 
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2020 - 2022 Copyright:
+    © 2022 Copyright:
     <a class="text-white" href="https://transparency.org.nz/">Transparency International New Zealand</a>
   </div>
   <!-- Copyright -->
@@ -178,5 +171,5 @@ Local Government New Zealand is fully supportive of this resource.
 <!-- Footer -->
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-</body>
+</body></body>
 </html>
