--- a/index.htm
+++ b/index.htm
@@ -6,34 +6,11 @@
     <title>Transparency and Governance ROAD TRIP</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 	<link href="/Local-Government-Resource/style.css" rel="stylesheet">
+	<script type="module" src='https://unpkg.com/html-include-element'></script>
   </head>
   <body>
-  <!-- Navbar -->
+  <html-include src="/Local-Government-Resource/nav.htm" no-shadow></html-include>
 
-  <div class="container-fluid" style="background-color:#3695d8;padding-left: 8%; padding-right: 8%;">
-  <nav class="navbar navbar-expand-md">
-
-	<a class="navbar-brand" href="/Local-Government-Resource/"><img src="/Local-Government-Resource/assets/TINZ-Logo-web-blue 1.svg" alt="Transparency International New Zealand Logo"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center" style="font-size: 110%;">
-        <li class="nav-item">
-         <a class="nav-link active home-link" aria-current="page" href="/Local-Government-Resource/">ROAD TRIP Home</a>
-        </li>
-		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_1/index.html">Day 1:<br>Openness, licence and motivation</a></li>
-		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_2/index.html">Day 2:<br>Governace, ethics and integrity</a></li>
-		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/road_trip_3/index.html">Day 3:<br>Making Decisions</a></li>
-        
-       
-      </ul>
-
- 
-  </div>
-</nav>
-</div>
-<!-- End Nav -->
 
  <div class="container-fluid webpage-max-width">  
   <h1 class="p-4 text-center">Transparency and Governance ROAD TRIP</h1>
@@ -43,7 +20,7 @@
 <li>There are three learning resources, click on each box below to access them.</li>
 <li>Click on the buttons to navigate the course</li>
 <li>The diagonal double arrow (provide image) enables full screen view</li>
-<li>There are quizes along the way to help you think about the topic</li>
+<li>There are quizzes along the way to help you think about the topic</li>
 </ul>
 <h2>Privacy and Confidentiality</h2>
 <p>There is no recording of your answers; no personal your data is kept. Information available is limited to aggrigate website visitor data</p>
@@ -59,7 +36,7 @@
 <a href="/Local-Government-Resource/road_trip_2/index.html">Day 2<br>Hands on the Wheel: Governance, ethics and integrity</a>
 </div>
 <div class="col-12 col-sm-6 col-lg-4">
-<a href="/Local-Government-Resource/road_trip_3/index.html">Day 3<br>Making Decisions</a>
+<a href="/Local-Government-Resource/road_trip_3/index.html">Day 3<br>Making decisions</a>
 </div></div></div>
 <div class="container-fluid webpage-max-width pt-2">
 <h2>About the Resource</h2>
@@ -75,73 +52,9 @@
 
 
 </div>
-<!-- Footer -->
-<!-- Footer -->
-<!-- https://mdbootstrap.com/docs/standard/navigation/footer/ -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-<footer class="bg-dark text-center text-white" style="margin-top: 100px;>
-  <!-- Grid container -->
-  <div class="container p-4">
-    <!-- Section: Social media 
-    <section class="mb-4">
-      <!-- Facebook 
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-facebook-f"></i
-      ></a>
-
-      <!-- Twitter 
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-twitter"></i
-      ></a>
-
-      <!-- Google 
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-google"></i
-      ></a>
-
-      <!-- Instagram 
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-instagram"></i
-      ></a>
-
-      <!-- Linkedin 
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-linkedin-in"></i
-      ></a>
-
-      <!-- Github 
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-github"></i
-      ></a>
-    </section>
-    <!-- Section: Social media -->
+<html-include src="/Local-Government-Resource/footer.htm" no-shadow></html-include>
 
 
-
-
-    <!-- Section: Text -->
-    <section class="mb-4">
-      <p>
-Local Government New Zealand is fully supportive of this resource.
-      </p>
-    </section>
- 
-  </div>
-  <div class="row justify-content-center">
-<div class="col-4 p-4 text-center m-2" style="background-color:#3695d8 ;">
-<img src="/Local-Government-Resource/assets/TINZ-Logo-web-blue 1.svg" alt="Transparency International New Zealand Logo">
-</div></div>
-  <!-- Grid container -->
-
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2020 - 2022 Copyright:
-    <a class="text-white" href="https://transparency.org.nz/">Transparency International New Zealand</a>
-  </div>
-  <!-- Copyright -->
-</footer>
-<!-- Footer -->
-<!-- END Footer -->
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
