--- a/Road Trip 1/index.html
+++ b/Road Trip 1/index.html
@@ -64,7 +64,7 @@
         </li>
 		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/Road Trip 1/index.html">Day 1:<br>Social licence & motivation</a></li>
 		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/Road Trip 2/index.html">Day 2:<br>Governance & integrity</a></li>
-		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/Road Trip 3/index.html">Day 3:<br>Decisions</a></li>    
+		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/Road Trip 3/index.html">Day 3:<br>Making Decisions</a></li>    
       </ul>
   </div>
 </nav>
