--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </li>
 		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/Road Trip 1/index.html">Day 1:<br>Social licence & motivation</a></li>
 		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/Road Trip 2/index.html">Day 2:<br>Governance & integrity</a></li>
-		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/Road Trip 3/index.html">Day 3:<br>Decisions</a></li>    
+		<li class=""><a class="nav-link text-dark" href="/Local-Government-Resource/Road Trip 3/index.html">Day 3:<br>Making Decisions</a></li>    
       </ul>
   </div>
 </nav>
@@ -50,7 +50,7 @@
 <a href="/Local-Government-Resource/Road Trip 2/index.html">Day 2<br>Hands on the Wheel:<br>Governance & integrity</a>
 </div>
 <div class="col-12 col-sm-6 col-lg-4">
-<a href="/Local-Government-Resource/Road Trip 3/index.html">Day 3<br>Navigating:<br>Decisions</a>
+<a href="/Local-Government-Resource/Road Trip 3/index.html">Day 3<br>Navigating:<br>Making decisions</a>
 </div></div></div>
 <div class="container-fluid webpage-max-width pt-4">
 
