--- a/index-initial.html
+++ b/index-initial.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Transparency and Governance Road Trip</title>
-  
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans&family=Oswald&family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
 
@@ -32,7 +34,7 @@
 <div class="container-fluid webpage-max-width pt-4">
 
 <h2>Privacy and Confidentiality</h2>
-<p>There is no recording of your answers; no personal your data is kept. Information we gather is limited to aggrigate website visitor data</p>
+<p>There is no recording of your answers; no personal your data is kept. Information we gather is limited to aggregate website visitor data</p>
 
 </div>
 	
