--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 	<link href="/Local-Government-Resource/style.css" rel="stylesheet"> 
   
-  
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans&family=Oswald&family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body><!-- NAV -->
   <div class="container-fluid" style="background-color:#3695d8;padding-left: 8%; padding-right: 8%;">
@@ -55,7 +57,7 @@
 <div class="container-fluid webpage-max-width pt-4">
 
 <h2>Privacy and Confidentiality</h2>
-<p>There is no recording of your answers; no personal your data is kept. Information we gather is limited to aggrigate website visitor data</p>
+<p>There is no recording of your answers; no personal your data is kept. Information we gather is limited to aggregate website visitor data</p>
 
 </div>
 	
